--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,8 @@
 {
-    "name": "johnsnook/yii2-sbadmin",
+    "name": "johnsnook/yii2-sbadmin2",
     "description": "A Bootstrap 4 admin template theme for Yii2",
     "type": "yii2-extension",
-    "keywords": ["yii2","extension","bootstrap","admin","template","modular","php","theme","html5","jquery","sbadmin","bootstrap4"],
+    "keywords": ["yii2","extension","bootstrap","admin","template","modular","php","theme","html5","jquery","sbadmin2","bootstrap4"],
     "license": "MIT",
     "authors": [
         {
@@ -13,7 +13,7 @@
     "require": {
         "yiisoft/yii2": "*",
         "yiisoft/yii2-bootstrap": "~2.1.0"
-    },
+    ,
     "autoload": {
         "psr-4": {
             "johnsnook\\sbadmin2\\": ""
