--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
     ],
     "require": {
         "yiisoft/yii2": "*",
-        "yiisoft/yii2-bootstrap": "~2.1.0"
+        "yiisoft/yii2-bootstrap": "~2.1.0",
+        "rmrevin/yii2-fontawesome": "~3.0"
     },
     "autoload": {
         "psr-4": {
