--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,9 @@
     ],
     "require": {
         "yiisoft/yii2": "*",
-        "yiisoft/yii2-bootstrap": "~2.1.0"
+        "yiisoft/yii2-bootstrap": "~2.0.8",
+        "rmrevin/yii2-fontawesome": "~2.7"
+
     },
     "autoload": {
         "psr-4": {
