--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,7 @@
     ],
     "require": {
         "yiisoft/yii2": "*",
-        "yiisoft/yii2-bootstrap": "~2.0.8",
-        "rmrevin/yii2-fontawesome": "~2.7"
+        "yiisoft/yii2-bootstrap": "~2.0.8"
     },
     "autoload": {
         "psr-4": {
