--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     ],
     "require": {
         "yiisoft/yii2": "*",
-        "yiisoft/yii2-bootstrap": "~2.0.8"
+        "bower-asset/bootstrap": "4.*"
     },
     "autoload": {
         "psr-4": {
