--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,7 @@
     ],
     "require": {
         "yiisoft/yii2": "*",
-        "yiisoft/yii2-bootstrap": "~2.0.0",
-        "yiisoft/yii2-bootstrap4": "^1.0@dev"
+        "yiisoft/yii2-bootstrap4": "*"
     },
     "autoload": {
         "psr-4": {
